Make background color of home screen black to prevent flickering

--- a/app/assets/stylesheets/_pages.css.sass
+++ b/app/assets/stylesheets/_pages.css.sass
@@ -1,4 +1,5 @@
 body.pages.home
+  background-color: #000 // Don't yet show the normal background (the map), as the carousel items may load slower than the map which results in flickering
   height: 100%
   color: #fff
 
